[metadata]
name = logshipper
author = Koert van der Veer
author-email = koert@ondergetekende.nl
summary = Gathers, filters, mangles and redistribute log messages
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages = 
    logshipper

[entry_points]
console_scripts =
    logshipper = logshipper.cmd:main

logshipper.inputs =
    syslog = logshipper.input:Syslog
    stdin = logshipper.input:Stdin
    tail = logshipper.tail:Tail

logshipper.filters =
    match = logshipper.filters:prepare_match
    set = logshipper.filters:prepare_set
    rabbitmq = logshipper.filters:prepare_rabbitmq
    statsd = logshipper.filters:prepare_statsd
    drop = logshipper.filters:prepare_drop
    stdout = logshipper.filters:prepare_stdout
    debug = logshipper.filters:prepare_debug
    call = logshipper.filters:prepare_call
    jump = logshipper.filters:prepare_jump
