[metadata]
name = logshipper
author = Koert van der Veer
author-email = koert@ondergetekende.nl
summary = Gathers, filters, mangles and redistribute log messages
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages = 
    logshipper

[entry_points]
console_scripts =
    logshipper = logshipper.cmd:main

logshipper.inputs =
    syslog = logshipper.input:Syslog
    stdin = logshipper.input:Stdin
    tail = logshipper.tail:Tail
    command = logshipper.input:Command

logshipper.filters =
    drop = logshipper.filters:prepare_drop
    match = logshipper.filters:prepare_match
    edge = logshipper.filters:prepare_edge
    python = logshipper.filters:prepare_python
    replace = logshipper.filters:prepare_replace
    set = logshipper.filters:prepare_set
    unset = logshipper.filters:prepare_unset
    call = logshipper.outputs:prepare_call
    debug = logshipper.outputs:prepare_debug
    fork = logshipper.outputs:prepare_fork
    jump = logshipper.outputs:prepare_jump
    logging = logshipper.pylogging:prepare_logging
    rabbitmq = logshipper.outputs:prepare_rabbitmq
    statsd = logshipper.outputs:prepare_statsd
    stdout = logshipper.outputs:prepare_stdout
